# GAP

./: .env  .env.example  .gitignore  ApiKey逗号拼接&强密钥生成工具.html  ApiKey逗号拼接工具 - thinks for 雨默.html  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IFLOW.md  LICENSE  LICENSE.zh-CN  WARP.md  changelog.md  context_management_plan.md  deploy.sh  multi_user_memory_mode_plan.md  package-lock.json  rbac_and_key_expiry_plan.md  readme.md  requirements.txt  start.sh
.clinerules/: deployment-preferences.md  dev-plan-naming-convention.md  markdown-linting.md  project-overview.md  virtual-environment.md
.orchids/: orchids.json
app/: __init__.py  config.py  gemini.py  log_config.py  main.py  models.py  utils.py  version.py
app/api/: cache_endpoints.py  endpoints.py  middleware.py  models.py  rate_limit_utils.py  request_processing.py  request_processor.py  request_utils.py  token_utils.py  tool_call_utils.py  v2_endpoints.py
app/core/: context_store.py  daily_reset.py  db_settings.py  db_utils.py  dependencies.py  error_helpers.py  gemini.py  key_management.py  key_manager_class.py  key_utils.py  message_converter.py  reporting.py  request_helpers.py  response_wrapper.py  security.py  tracking.py  usage_reporter.py  utils.py
app/core/cache/: cleanup.py  manager.py
app/core/context/: converter.py  store.py
app/core/database/: models.py  settings.py  utils.py
app/core/keys/: checker.py  manager.py  utils.py
app/core/processing/: __init__.py  error_handler.py  main_handler.py  stream_handler.py  utils.py
app/core/reporting/: daily_reset.py  reporter.py  scheduler.py
app/core/security/: auth_dependencies.py  jwt.py  rate_limit.py
app/core/services/: gemini.py
app/data/: context_store.db  model_limits.json
app/handlers/: __init__.py  error_handlers.py  log_config.py
app/web/: auth.py  routes.py
app/web/templates/: _base.html  login.html  manage.html  manage_caches.html  manage_context.html  manage_keys.html  report.html
backend/: .env.example  README.md  UV_USAGE.md  pyproject.toml  requirements.txt
backend/scripts/: dev.sh  test.sh
backend/src/gap/: __init__.py  config.py  main.py
backend/src/gap/api/: __init__.py  cache_endpoints.py  config_endpoints.py  config_validation.py  context_endpoints.py  debug.py  endpoints.py  middleware.py  models.py  resource_endpoints.py  v2_endpoints.py
backend/src/gap/core/: __init__.py  dependencies.py  tracking.py
backend/src/gap/core/cache/: cleanup.py  manager.py
backend/src/gap/core/concurrency/: lock_manager.py
backend/src/gap/core/config/: validation.py
backend/src/gap/core/context/: converter.py  store.py
backend/src/gap/core/database/: models.py  settings.py  utils.py
backend/src/gap/core/health/: monitor.py
backend/src/gap/core/keys/: checker.py  manager.py  utils.py
backend/src/gap/core/processing/: api_caller.py  error_handler.py  key_selection.py  main_handler.py  post_processing.py  request_prep.py  stream_handler.py  utils.py
backend/src/gap/core/reporting/: daily_reset.py  reporter.py  scheduler.py
backend/src/gap/core/resource/: __init__.py  bootstrap.py  manager.py
backend/src/gap/core/security/: auth_dependencies.py  jwt.py  rate_limit.py
backend/src/gap/core/services/: gemini.py
backend/src/gap/core/utils/: request_helpers.py  response_wrapper.py
backend/src/gap/utils/: __init__.py  error_handlers.py  log_config.py  secure_logger.py
backend/tests/: test_healthz.py
deployment/docker/: Dockerfile  Dockerfile.secure  Dockerfile.simple  deploy-secure.sh  docker-compose.yml
deployment/scripts/: run_uv.sh
dev_plan/: caching_optimization_plan.md  code_optimization_plan.md  context_management_plan.md  enhancements_plan_20250506.md  gemini_v2_api_plan.md  key_management_modes_plan.md  key_selection_optimization_plan.md  message_format_conversion_plan.md  optimization_plan_final.md  project_refactoring_plan.md  rbac_and_key_expiry_plan.md  report_page_plan.md  v1.8_optimizations_plan_20250509.md
docs/: LICENSE.zh-CN  PROJECT_STRUCTURE.md  backend_auth_keys_models.md
frontend/: README.md  auto-imports.d.ts  components.d.ts  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
frontend/playwright/: global-setup.js
frontend/playwright-report/: index.html
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: global.css
frontend/src/components/: AppNavigation.vue  ViewSwitcher.vue
frontend/src/composables/: useKeyForm.ts
frontend/src/constants/: apiConstants.js  notificationConstants.js  viewModeConstants.js
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/services/: apiService.d.ts  apiService.js  apiService.ts  errorHandler.ts  http.ts
frontend/src/services/modules/: auth.ts  (+3 more)
frontend/src/stores/: appStore.d.ts  appStore.js  authStore.js  authStore.ts  contextStore.js  keysStore.js  notificationStore.js
frontend/src/types/: global.d.ts
frontend/src/views/: ConfigView.vue  Dashboard.vue  ForbiddenView.vue  HomeView.vue  LoginView.vue  ManageContextView.vue  ManageKeysView.vue  NotFoundView.vue  ReportView.vue  TraditionalListView.vue  UnauthorizedView.vue
frontend/tests/: app.spec.js
frontend/tests/unit/: app.smoke.spec.ts
tools/: ApiKey逗号拼接&强密钥生成工具.html  api-key-generator.html
(+9 files in other folders)
