[project]
name = "gemini-api-proxy"
version = "1.8.1"
description = "基于FastAPI的Gemini API代理服务"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11.0",
    "pytz>=2025.1",
    "python-jose[cryptography]>=3.5.0",
    "aiosqlite>=0.21.0",
    "google-generativeai==0.8.5",
    "google-api-python-client>=2.179.0",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.uv]
package = false

[tool.uv.pip]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://mirrors.aliyun.com/pypi/simple/"]